--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,3 +2,6 @@
 @import "fonts.scss";
 @import "blocks/page-wrap.scss";
 @import "blocks/page-header.scss";
+@import "blocks/section-title.scss";
+@import "blocks/features.scss";
+@import "blocks/services.scss";
