--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -24,18 +24,53 @@
 .page-header__nav-list {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  padding-left: 58px;
-  padding-right: 55px;
+  padding-left: 20px;
   list-style: none;
+
+  li {
+    width: 150px;
+    margin-right: 110px;
+    margin-bottom: 20px;
+    position: relative;
+    text-align: center;
+
+    &::before {
+      display: none;
+      content: "";
+      position: absolute;
+      width: 164px;
+      height: 86px;
+      top: -95%;
+      left: -6px;
+      background-image: url("../img/ellipse-icon.png");
+      background-repeat: no-repeat;
+      z-index: 10;
+    }
+
+    &:hover::before {
+      display: block;
+    }
+  }
+
+  li:nth-child(3n) {
+    margin-right: 0;
+  }
 }
 
 .page-header__list-item {
+  position: relative;
   color: #afeffa;
   text-decoration: none;
+  z-index: 100;
+}
+
+.page-header__contacts {
+  display: none;
+  width: 240px;
+  font-size: 13px;
 }
 
 .page-header__banner {
@@ -55,4 +90,65 @@
   color: #afeffa;
   font-size: 33.33px;
   text-shadow: 1px 1px 7px #ffffff;
+}
+
+@media (max-width: 500px) {
+  .page-header {
+    width: 100%;
+    min-height: 279px;
+    background-image: url("../img/header-back_mobile1.png");
+    background-position: 0 0;
+  }
+
+  .page-header__container {
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .page-header__logo-image {
+    width: 80px;
+    height: 87px;
+  }
+
+  .page-header__nav {
+    display: none;
+  }
+
+  .page-header__contacts {
+    display: block;
+  }
+
+  .page-header__contacts-title {
+    margin: 0;
+    margin-bottom: 10px;
+    color: #96fff6;
+    text-align: center;
+    text-shadow: 1px -3px 10px rgba(255, 255, 255, 0.7), 1px -2px 10px rgba(255, 255, 255, 0.7), 1px -1px 10px rgba(255, 255, 255, 0.7), 1px 0 10px rgba(255, 255, 255, 0.7), 1px 2px 10px rgba(255, 255, 255, 0.7), 1px 3px 10px rgba(255, 255, 255, 0.7);
+  }
+
+  .page-header__contacts-item {
+    margin: 0;
+    margin-bottom: 5px;
+    text-align: center;
+  }
+
+  .page-header__contacts-link {
+    text-decoration: none;
+    font-weight: 500;
+    color: #ffffff;
+    text-transform: none;
+  }
+
+  .page-header__banner-title {
+    display: none;
+  }
+
+  .page-header__slogan {
+    margin-top: 50px;
+    padding-right: 0;
+    width: 300px;
+    font-size: 12px;
+    text-shadow: 1px 1px 7px #ffffff;
+  }
 }
