--- a/source/sass/blocks/section-title.scss
+++ b/source/sass/blocks/section-title.scss
@@ -4,3 +4,10 @@
   text-transform: uppercase;
   font-weight: 400;
 }
+
+@media (max-width: 500px) {
+  .section-title {
+    font-size: 20px;
+    text-transform: none;
+  }
+}
