--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,3 +5,5 @@
 @import "blocks/section-title.scss";
 @import "blocks/features.scss";
 @import "blocks/services.scss";
+@import "blocks/about-company.scss";
+@import "blocks/page-footer.scss";
